--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -5,3 +5,14 @@
     one more css for each page that will contain the selected used 
     on that page only (the ones not reused in other pages).
 */
+
+.transparent-header {
+    position: absolute;
+    top: 0;
+    width: 64%;
+    background-color: rgba(255, 255, 255, 0); /* Adjust the transparency by changing the last value (0.5) */
+    text-align: center;
+    padding: 20px 0;
+    z-index: 10; /* Ensure the header stays above the image */
+    
+}
