--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -1,3 +1,8 @@
 /* 
     General Styles used on every website (Don't Repeat Yourself)
 */
+
+.site-wide-margin{
+    margin-left: 18%;
+    margin-right: 18%;
+}
