--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -15,30 +15,55 @@
     cursor: pointer;
 }
 nav {
-    background: linear-gradient(0deg, rgb(254, 254, 254, 0) 0%, rgba(237, 207, 36) 100%); 
+    /* background: linear-gradient(0deg, rgb(254, 254, 254, 0) 0%, rgba(237, 207, 36) 100%);  */
+    background: rgb(245, 195, 68);
+    box-shadow: 0px 7px 6px rgb(46, 45, 45);
 }
 
   body{
   font-family: "Space Mono";
   width: 100%;
+  height: 300%;
   background: rgb(85, 83, 93);
   margin-bottom: 10px;
-  box-shadow: 2px 21px 30px 8px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 2px 21px 30px 8px rgba(0, 0, 0, 0.2); */
   }
 
-.banner {
+/* .banner {
     box-shadow: 0px -17px 29px 13px rgb(3, 3, 3);
-  }
+  } */
 
   .features{
     background:radial-gradient(rgb(71, 70, 70) 0%, rgb(30, 30, 38) 100%);
     box-shadow: 0px 0px 90px 13px rgb(39, 39, 40);
     
   }
-  /* .featureOne:hover {
-    background: rgb(245, 195, 68);
-  } */
+.reviewsPic {
+  border: 4px solid rgb(245, 195, 68);
+  height: 190px;
+}
 
-  .featureTwo:hover {
-    background: rgb(245, 195, 68);
-  }
+.reviewsPicCod {
+  border: 4px solid rgb(245, 195, 68);
+  height: 190px;
+}
+
+.reviewsPicStr {
+  border: 4px solid rgb(245, 195, 68);
+  height: 200px;
+}
+
+.profilePic {
+  border-radius: 100px;
+  height: 120px;
+  width: 120px;
+}
+
+.profileList {
+  background-color: rgb(85, 83, 93);
+}
+
+.userInfo {
+  background-color:rgb(85, 83, 93);
+  color: white;
+}
